# micr_extractor

./: .gitignore  MICRExtraction.md  OLLAMA_GUIDE.md  README.md  VLLM_PRODUCTION_GUIDE.md  pyproject.toml
micr/: __init__.py  api.py  cli.py  models.py
micr/engines/: base.py  template_engine.py  tesseract_engine.py  vlm_engine.py
micr/parsing/: consensus.py  hybrid.py  parser.py  validator.py
micr/preprocessing/: camera_pipeline.py  common.py  micr_locator.py  scanner_pipeline.py
micr_extraction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: extract_templates_from_image.py  generate_templates.py
tests/: test_extractor.py  test_vlm_engine.py  test_vlm_integration.py
